# sqlx-news-example

./: .env.example  Cargo.toml  README.md  docker-compose.yaml
migrations/: 20230827034603_add_article_table.sql  20230827082921_add_article_table.up.sql
resources/: seed_articles.json
src/: env.rs  http.rs  lib.rs  main.rs  news.rs  types.rs
src/news/: domain.rs
