[package]
name = "sqlx-news-example"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.4.0", features = ["derive"] }
dotenv = "0.15"
futures = "0.3"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
tokio = { version = "1", features = ["full"] }
